css/pland.css
/* Fonts
font-family: 'Nunito Sans', sans-serif;
font-family: 'Roboto', sans-serif;

/* Global */

:root {
  --bground: #7E8495;
  --bigc: #5B678C;
  --mediumc: #41444D;
  --smallc: #8595CC;
}

body {
  height: 100%;
  width: 100%;
  background: var(--bground);
  overflow: hidden;
}

.wrapper {
  width: 100vw;
  height: 100vh;
  display: grid; 
  grid-template-columns: repeat(18, 1fr);
  grid-template-rows: repeat(18, 1fr);
}

a {
  text-decoration: none;
  color: var(--mediumc);
}

a:visited {
  color: var(--mediumc);
}

/* Circles */
.circle-container {
  grid-column: 4 / 8;
  grid-row: 6 / 14;
  min-width: 15vw;
  min-height: 30vh;
  display: grid;
  justify-content: center;
  align-items: center;
}

.circles {
  position: relative;
  width: 300px;
  height: 300px;
  background: #7E8495;
}

.big-circle {
  position: absolute;
  width: 300px;
  height: 300px;
  border-radius: 50%;
  opacity: 0;
    -moz-transition: opacity 2.5s;
    -webkit-transition: opacity 2.5s;
    -o-transition: opacity 2.5s;
    transition: opacity 2.5s;
  background: #5B678C;
}

.loaded .big-circle {
  opacity: 1;
}

.medium-circle {
  margin-top: 17%;
  margin-left: 17%;
  position: absolute;
  width: 66%;
  height: 66%;
  background-color: #41444D;
  opacity: 0;
    -moz-transition: opacity 2.5s;
    -webkit-transition: opacity 2.5s;
    -o-transition: opacity 2.5s;
    transition: opacity 2.5s;
  border-radius: 50%;
}

.loaded .medium-circle {
  opacity: 1;
  transition-delay: .5s;
}

.small-circle {
  margin-top: 25%;
  margin-left: 25%;
  position: absolute;
  width: 50%;
  height: 50%;
  background-color: #8595CC;
  border-radius: 50%;
  opacity: 0;
    -moz-transition: opacity 3s;
    -webkit-transition: opacity 3s;
    -o-transition: opacity 3s;
    transition: opacity 3s;
  border-radius: 50%;
}

.loaded .small-circle {
  opacity: 1;
  transition-delay: 1s;
}

/* Center Line */
.centerline {
  grid-column: 9 / 9;
  grid-row: 6 / 14;
  width: 10px;
  height: 100%;
  border-left: 5px solid var(--mediumc);
  align-self: center;
  opacity: 0;
    -moz-transition: opacity 1s;
    -webkit-transition: opacity 1s;
    -o-transition: opacity 1s;
    transition: opacity 1s;
}

.loaded .centerline {
  opacity: 1;
  transition-delay: 1.5s;
}

/* Right Section */
.right-section {
  grid-column: 10 / 16;
  grid-row: 7 / 14;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  justify-items: start;
  opacity: 0;
    -moz-transition: opacity 1s;
    -webkit-transition: opacity 1s;
    -o-transition: opacity 1s;
    transition: opacity 1s;
}

.loaded .right-section {
  opacity: 1;
  transition-delay: 1.75s;
}

/* Name Box */
.name {
  align-self: end;
  margin-bottom: 3%;
}

.name h1 {
  font-family: 'Nunito Sans', sans-serif;
  font-weight: 600;
  font-size: 2.75em;
  color: var(--mediumc);
}

hr {
  border: 0;
  grid-column: 1 / 2;
  margin-top: -3px;
  height: 3px;
  width: 100%;
  background: var(--mediumc);
}

.name p {
  font-family: 'Roboto', sans-serif;
  font-size: 1em;
  color: var(--mediumc);
}

/* Circle Box */
.btn-box {
  width: 100%;
  font-family: 'Roboto', sans-serif;
  font-size: 1.25em;
  color: var(--mediumc);
  display: grid;
  grid-template-columns: repeat(4, 1fr);
}

/* CIRCLE BTNS  */
.orb {
  position: absolute;
  width: 2.25%;
  height: 2.25%;
  padding: 2.25%;
   -webkit-border-radius: 50%;
      -moz-border-radius: 50%;
      border-radius: 50%;
  background: var(--bigc);
} 

.orb:hover {
  background: var(--smallc);
  box-shadow: 0 0 0 6px rgba(65,68,77,0.5);
}

/* SubSections */
.projects {
  display: flex;
}

.resume {
  display: flex;
}

.about {
  display: flex;
}

.contact {
  display: flex;
}

/* Section Names */
.layer-1 {
  position: absolute;
  top: 135%;
  left: 1%;
  z-index: 1;
  opacity: 0;
  font-size: 1.75em;
}

.orb-1:hover {
  cursor: pointer;
}

.orb-1:hover > .layer-1 {
  opacity: 1;
}

.layer-2 {
  position: absolute;
  top: 135%;
  left: -180%;
  z-index: 2;
  opacity: 0;
  font-size: 1.75em;
}

.orb-2:hover {
  cursor: pointer;
}

.orb-2:hover > .layer-2 {
  opacity: 1;
  cursor: pointer;
}

.layer-3 {
  position: absolute;
  top: 135%;
  left: -370%;
  z-index: 3;
  opacity: 0;
  font-size: 1.75em;
}

.orb-3:hover {
  cursor: pointer;
}

.orb-3:hover > .layer-3 {
  opacity: 1;
  cursor: pointer;
}

.layer-4 {
  position: absolute;
  top: 135%;
  left: -555%;
  z-index: 4;
  opacity: 0;
  font-size: 1.75em;
}

.orb-4:hover {
  cursor: pointer;
}

.orb-4:hover > .layer-4 {
  opacity: 1; 
}

.orb-1 .layer-1:hover {
  cursor: default;
  opacity: 0;
}

.orb-2 .layer-2:hover {
  cursor: default;
  opacity: 0;
}

.orb-3 .layer-3:hover {
  cursor: default;
  opacity: 0;
}

.orb-4 .layer-4:hover {
  cursor: default;
  opacity: 0;
}
/* ... */

